# ext2mimic

./: CMakeLists.txt  Dir.cpp  README.md  bitMap.cpp  bitMap.h  fs.cpp  fs.h  image.cpp  image.h  inode.cpp  inode.h  main.cpp  params.h  superBlock.cpp  superBlock.h
include/: Dir.h  bitMap.h  fs.h  image.h  inode.h  params.h  superBlock.h  utils.h  vimimic.h
src/: Dir.cpp  bitMap.cpp  fs.cpp  image.cpp  inode.cpp  superBlock.cpp  utils.cpp  vimimic.cpp
test/: write_head_superBlock_2_image(initial).cpp
